<resources>
    <string name="xx_app_name">xx messenger</string>
    <string name="xx_app_name_mock">xx messenger</string>
    <string name="xx_app_name_mainNet">xx messenger</string>
    <string name="xx_app_name_mainNetDebug">xx messenger</string>
    <string name="xx_app_name_releaseNetDebug">xx messenger</string>
    <string name="xx_app_name_localNdf">xx messenger</string>
    <string name="xx_app_name_crustIntegrationDebug">xx messenger</string>
    <string name="xx_app_name_notificationsTest">xx messenger</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_contacts">Connections</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_scan">Scan QR</string>
    <string name="chats">Chats</string>
    <string name="search_bar_text">Search Chats</string>
    <string name="dashboard">Dashboard</string>
    <string name="search_contacts">Search connections</string>
    <string name="search_chats">Search chats</string>
    <string name="search_country">+1 United States</string>
    <string name="password_recovery_info">Where can I get a code?</string>
    <string name="network_title">Network Info</string>
    <string name="network_description">
        Check out our Network Dashboard for real-time information on the Elixxir network
        including node locations, computation size, time to finalization and other
        statistics.</string>
    <string name="dashboard_btn_description">Dashboard</string>
    <string name="password_recovery_is_not_supported">Password Recovery Is Not Supported</string>
    <string name="password_keep_a_copy">
        Please keep a copy of your login credentials somewhere safe for reference.
        You will not be able to recover your account through the app if you forget your
        password or email.</string>
    <string name="error_unrecoverable">
        Unrecoverable error, something went wrong in your registration.
        Please reinstall it and try again.</string>
    <string name="error_unrecoverable_title">Something Went Wrong.</string>
    <string name="error_connection_down_desc">
        Please return to an area with cellular data or wifi and check to make sure your
        mobile data or wifi setting is enabled. Also check that Airplane Mode is disabled.
        Restart your app to finish the registration process.</string>
    <string name="error_connection_down_title">You are no longer connected to the network</string>
    <string name="error_server_down_title">Unable to Connect</string>
    <string name="error_server_down_desc">
        The xx messenger needs an internet connection to run properly.
        Check that you have a connection to a cellular or wifi network and try again.
        If the problem persists, try again later.</string>
    <string name="fcm_message">xx network</string>
    <string name="progress_secondary_text">
        [B]Did you know?[B]<br /> When you send an xm,
        it travels to and is mixed across 4 continents, travelling the equivalent of
        half the distance to the moon!</string>
    <string name="settings">Settings</string>
    <string name="biometric_error_sdk_not_supported">SDK version not supported</string>
    <string name="biometric_error_hardware_not_supported">
        Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">
        Fingerprint is not registered in device or secure lock is not set.</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_reset">Your biometrics configuration has been reset</string>
    <string name="biometric_failure">Biometric auth has failed!</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Biometrics Login was Successful!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_result">Result</string>
    <string name="hint_username">Username</string>
    <string name="btn_next">Next</string>
    <string name="btn_not_now">Not right now</string>
    <string name="btn_unlock">Unlock</string>
    <string name="registration_create_account_title">Create Account</string>
    <string name="registration_keystore_created">Keystore Created</string>
    <string name="registration_public_profile_msg">
        Help others find you by completing your public profile</string>
    <string name="registration_complete_now">Complete Now!</string>
    <string name="registration_btn_skip">Skip</string>
    <string name="registration_password_msg">Password must contain 6 characters</string>
    <string name="registration_password_must_contain_msg">Password must contain<br />6 characters.</string>
    <string name="registration_passwords_must_match_msg">Passwords must match</string>
    <string name="registration_passwords_contains_char_msg">Password contains 6 characters</string>
    <string name="registration_passwords_match">Passwords Match</string>
    <string name="registration_username_must_be_char">Username must be at least 4 characters.</string>
    <string name="registration_username_invalid_char">Username has invalid characters</string>
    <string name="registration_username_max_char">Max character limit reached.</string>
    <string name="registration_username_already_taken">Name already exists.</string>
    <string name="registration_character_requirement_met">Character requirement met.</string>
    <string name="registration_unique_username_msg">
        Create a unique username on the xx network that will appear in both the Public Search
        and in users’ contacts.</string>
    <string name="registration_username_cannot_be_empty">Username can\'t be empty</string>
    <string name="chat_say_hello_text">Say hello to %s!</string>
    <string name="chat_msg_elapsed_time">%1$02d:%2$02d</string>
    <string name="chat_msg_document_file_size">%02d KB</string>
    <string name="default_notification_channel_id" translatable="false">notifications_channel</string>
    <string name="request_notification_channel_id" translatable="false">request_channel</string>
    <string name="confirm_notification_channel_id" translatable="false">confirm_channel</string>
    <string name="group_notification_channel_id" translatable="false">group_channel</string>
    <string name="e2e_notification_channel_id" translatable="false">e2e_channel</string>
    <string name="notification_request_text">Request received</string>
    <string name="notification_confirm_text">Request accepted</string>
    <string name="notification_e2e_text">New private message</string>
    <string name="notification_group_text">New group message</string>
    <string name="notification_endft_text">New media received</string>
    <string name="notification_reset_text">One of your contacts has restored their account</string>
    <string name="default_notification_channel_label">Other notifications</string>
    <string name="notification_request_channel_label">Received requests</string>
    <string name="notification_confirm_channel_label">Sent requests</string>
    <string name="notification_e2e_channel_label">Private messages</string>
    <string name="notification_group_channel_label">Group messages</string>
    <string name="request_verifying_popup_title">Verifying</string>
    <string name="request_verifying_popup_message">
        We are working on verifying the request to make
        sure it’s not spam. Please check again shortly.</string>
    <string name="registration_intro_tagline">A quantum leap in privacy</string>
    <string name="registration_intro_cta">Get Started</string>
    <string name="registration_flow_next">Next</string>
    <string name="registration_flow_ok">Got it</string>
    <string name="registration_flow_done">Done</string>
    <string name="registration_username_title">Choose your username.</string>
    <string name="registration_username_title_span">username</string>
    <string name="registration_username_body">
        Your unique username is the first name your contacts
        will see in their searches and contact lists.\n\nThis cannot be changed.</string>
    <string name="registration_choose_username_hint">Username</string>
    <string name="registration_username_explanation">
        Your chosen username will be registered with
        the User Discovery Service allowing your public keys to be accessible to anyone who knows
        your username. They will then be able to send a request to create an authenticated channel
        with you. You will then be able to reject unwanted requests.</string>
    <string name="registration_username_info_title">Your Username</string>
    <string name="registration_username_info_body">
        Your chosen username will be registered with the
        User Discovery Service allowing your public keys to be accessible to anyone who knows your
        username. They will then be able to send a request to create an authenticated channel
        with you. You will then be able to reject unwanted requests.</string>
    <string name="registration_username_info_dialog_link_text">User Discovery Service</string>
    <string name="registration_username_info_dialog_link_url">https://links.xx.network/ud</string>
    <string name="registration_error_username_min_len">
        User name must be at least four characters</string>
    <string name="registration_error_username_taken">Username taken. Try again.</string>
    <string name="registration_username_restore_account">Already have an account?</string>
    <string name="registration_welcome_title">%s, <br />welcome to xx network</string>
    <string name="registration_welcome_body">
        Would you like to register an email or phone number
        to help other users find your account? If not, you can still be found by your username,
        or completely off the grid using QR codes.</string>
    <string name="registration_welcome_continue">Yes, continue </string>
    <string name="registration_welcome_skip">No, skip this step</string>
    <string name="registration_email_title">Add your email.</string>
    <string name="registration_email_body">
        You can add, remove, or edit this email in your profile
        settings. Adding an email is optional.</string>
    <string name="registration_add_email_hint">Email</string>
    <string name="registration_email_skip_text">Skip. Do not add an email</string>
    <string name="confirm_delete_fact_dialog_title">Delete %s?</string>
    <string name="confirm_delete_fact_dialog_body">
        You will no longer be found by this %s. You can add your %s back later.</string>
    <string name="confirm_delete_fact_dialog_button">Delete %s</string>
    <string name="sftp_login_title">Login to your SFTP</string>
    <string name="stfp_login_body">Login to your server. Your credentials will be saved to secure storage locally on your device. Your backups are encrypted and protected by your backup password which is stored separately from these credentials.\n\nPlease Note: at this time, host key fingerprint checking is not implemented. If the server\'s fingerprint changes you will not be notified.</string>
    <string name="sftp_login_host_hint">Host</string>
    <string name="sftp_login_username_hint">Username</string>
    <string name="sftp_login_password_hint">Password</string>
    <string name="sftp_login_port_hint">Port (leave blank for default TCP 22)</string>
</resources>