<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ui"
            type="io.xxlabs.messenger.ui.dialog.info.InfoDialogUI" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/infoDialogRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/bottom_sheet_dialog_corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/info_dialog_title"
                android:text="@{ui.title}"
                android:layout_marginBottom="@dimen/registration_body_vertical_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/info_dialog_body"
                style="@style/dialog_title"
                tools:text="@string/registration_username_info_title"/>

            <TextView
                android:id="@+id/info_dialog_body"
                android:layout_marginBottom="@dimen/registration_body_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/info_dialog_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/info_dialog_button"
                tools:text="@string/registration_username_info_body"
                style="@style/dialog_body" />

            <io.xxlabs.messenger.support.view.SingleClickButton
                android:id="@+id/info_dialog_button"
                android:text="@string/registration_flow_ok"
                android:layout_marginTop="@dimen/registration_body_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/info_dialog_body"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/dialog_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>