<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ui"
            type="io.xxlabs.messenger.support.dialog.confirm.ConfirmDialogUI" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/infoDialogRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/bottom_sheet_dialog_corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirm_dialog_title"
                android:text="@{ui.title}"
                android:layout_marginBottom="@dimen/registration_body_vertical_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/confirm_dialog_body"
                style="@style/dialog_title"
                tools:text="@string/confirm_delete_fact_dialog_title"/>

            <TextView
                android:id="@+id/confirm_dialog_body"
                android:text="@{ui.body}"
                android:layout_marginBottom="@dimen/registration_body_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/confirm_dialog_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/confirm_dialog_button"
                tools:text="@string/confirm_delete_fact_dialog_body"
                style="@style/dialog_body" />

            <Button
                android:id="@+id/confirm_dialog_button"
                style="@style/confirm_dialog_button"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/registration_body_vertical_margin"
                android:text="@{ui.buttonText}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_dialog_body"
                tools:text="@string/confirm_delete_fact_dialog_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>